Fix JDK 8 test compilation errors: Java 9-11 API replacements
Replace Java 9+ APIs used in tests with JDK 8 compatible equivalents:
- List.of() / Set.of() / Map.of() → Arrays.asList / ImmutableSet.of / ImmutableMap.of
- Optional.isEmpty() → !optional.isPresent()
- String.repeat() → new String(new char[n]).replace(...)
- InputStream.nullInputStream() → new ByteArrayInputStream(new byte[0])
- Reader.nullReader() → new StringReader("")
- LocalDate.EPOCH → LocalDate.of(1970, 1, 1)
- Remove JDBC 4.3 test methods (enquoteLiteral, enquoteIdentifier, etc.)

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>
Signed-off-by: samikshya-chand_data <samikshya.chand@databricks.com>