@@ -21,6 +21,7 @@ import com.nimbusds.jwt.JWTClaimsSet;
 import com.nimbusds.jwt.SignedJWT;
 import java.time.Instant;
 import java.time.temporal.ChronoUnit;
+import java.util.Collections;
 import java.util.Date;
 import java.util.HashMap;
 import java.util.Map;
@@ -126,14 +127,14 @@ public class DatabricksTokenFederationProviderTest {
 
     Optional<Token> returnedToken =
         databricksTokenFederationProvider.tryTokenExchange("accessToken", "tokenType");
-    assertTrue(returnedToken.isEmpty());
+    assertTrue(!returnedToken.isPresent());
   }
 
   @Test
   public void testSameHostNoTokenExchange() throws Exception {
 
     Map<String, String> testExternalHeaders =
-        Map.of("Authorization", "Bearer " + testJwtTokenString());
+        Collections.singletonMap("Authorization", "Bearer " + testJwtTokenString());
 
     when(mockConfig.getHost()).thenReturn("https://host.com");
     when(mockCredentialsProvider.configure(any())).thenReturn(() -> testExternalHeaders);
@@ -192,7 +193,7 @@ public class DatabricksTokenFederationProviderTest {
     signedJWT.sign(signer);
     String jwtToken = signedJWT.serialize();
 
-    Map<String, String> testExternalHeaders = Map.of("Authorization", "Bearer " + jwtToken);
+    Map<String, String> testExternalHeaders = Collections.singletonMap("Authorization", "Bearer " + jwtToken);
 
     when(mockConfig.getHost()).thenReturn("https://host.com");
     when(mockCredentialsProvider.configure(any())).thenReturn(() -> testExternalHeaders);
