@@ -29,6 +29,7 @@ import java.io.IOException;
 import java.net.InetSocketAddress;
 import java.net.ServerSocket;
 import java.time.Duration;
+import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 import java.util.Properties;
@@ -187,9 +188,9 @@ public class ClientConfiguratorTest {
     when(mockContext.getHostForOAuth()).thenReturn("https://oauth-browser.databricks.com");
     when(mockContext.getClientId()).thenReturn("browser-client-id");
     when(mockContext.getClientSecret()).thenReturn("browser-client-secret");
-    when(mockContext.getOAuthScopesForU2M()).thenReturn(List.of("scope1", "scope2"));
+    when(mockContext.getOAuthScopesForU2M()).thenReturn(Arrays.asList("scope1", "scope2"));
     when(mockContext.getHttpConnectionPoolSize()).thenReturn(100);
-    when(mockContext.getOAuth2RedirectUrlPorts()).thenReturn(List.of(8020));
+    when(mockContext.getOAuth2RedirectUrlPorts()).thenReturn(Arrays.asList(8020));
     when(mockContext.getHttpMaxConnectionsPerRoute()).thenReturn(100);
     when(mockContext.getDisableOauthRefreshToken()).thenReturn(true);
     when(mockContext.getOAuthWebServerTimeout()).thenReturn(120);
@@ -201,7 +202,7 @@ public class ClientConfiguratorTest {
     assertEquals("https://oauth-browser.databricks.com", config.getHost());
     assertEquals("browser-client-id", config.getClientId());
     assertEquals("browser-client-secret", config.getClientSecret());
-    assertEquals(List.of("scope1", "scope2"), config.getScopes());
+    assertEquals(Arrays.asList("scope1", "scope2"), config.getScopes());
     assertEquals("http://localhost:8020", config.getOAuthRedirectUrl());
     assertEquals(DatabricksJdbcConstants.U2M_AUTH_TYPE, config.getAuthType());
   }
@@ -214,9 +215,9 @@ public class ClientConfiguratorTest {
     when(mockContext.getHostForOAuth()).thenReturn("https://oauth-browser.databricks.com");
     when(mockContext.getClientId()).thenReturn("browser-client-id");
     when(mockContext.getClientSecret()).thenReturn("browser-client-secret");
-    when(mockContext.getOAuthScopesForU2M()).thenReturn(List.of("scope.read", "scope.write"));
+    when(mockContext.getOAuthScopesForU2M()).thenReturn(Arrays.asList("scope.read", "scope.write"));
     when(mockContext.getHttpConnectionPoolSize()).thenReturn(100);
-    when(mockContext.getOAuth2RedirectUrlPorts()).thenReturn(List.of(8030));
+    when(mockContext.getOAuth2RedirectUrlPorts()).thenReturn(Arrays.asList(8030));
     when(mockContext.getHttpMaxConnectionsPerRoute()).thenReturn(100);
     when(mockContext.getDisableOauthRefreshToken()).thenReturn(true);
     when(mockContext.getOAuthWebServerTimeout()).thenReturn(120);
@@ -246,7 +247,7 @@ public class ClientConfiguratorTest {
     when(mockContext.getOAuthScopesForU2M())
         .thenReturn(Collections.singletonList(TEST_SCOPE_STRING));
     when(mockContext.getHttpConnectionPoolSize()).thenReturn(100);
-    when(mockContext.getOAuth2RedirectUrlPorts()).thenReturn(List.of(8020));
+    when(mockContext.getOAuth2RedirectUrlPorts()).thenReturn(Arrays.asList(8020));
     when(mockContext.getHttpMaxConnectionsPerRoute()).thenReturn(100);
     when(mockContext.getDisableOauthRefreshToken()).thenReturn(true);
     when(mockContext.getOAuthWebServerTimeout()).thenReturn(120);
@@ -259,7 +260,7 @@ public class ClientConfiguratorTest {
     assertEquals("https://oauth-browser.databricks.com", config.getHost());
     assertEquals("browser-client-id", config.getClientId());
     assertEquals("browser-client-secret", config.getClientSecret());
-    assertEquals(List.of(TEST_SCOPE_STRING), config.getScopes());
+    assertEquals(Arrays.asList(TEST_SCOPE_STRING), config.getScopes());
     assertEquals("http://localhost:8020", config.getOAuthRedirectUrl());
     assertEquals(DatabricksJdbcConstants.U2M_AUTH_TYPE, config.getAuthType());
   }
@@ -388,7 +389,7 @@ public class ClientConfiguratorTest {
 
     // Test with a single available port
     int availablePort = findFreePort();
-    List<Integer> ports = List.of(availablePort);
+    List<Integer> ports = Arrays.asList(availablePort);
     int result = configurator.findAvailablePort(ports);
     assertEquals(availablePort, result);
 
@@ -397,7 +398,7 @@ public class ClientConfiguratorTest {
     try (ServerSocket serverSocket = new ServerSocket()) {
       serverSocket.setReuseAddress(true);
       serverSocket.bind(new InetSocketAddress(availablePort));
-      ports = List.of(availablePort, secondAvailablePort);
+      ports = Arrays.asList(availablePort, secondAvailablePort);
       result = configurator.findAvailablePort(ports);
       assertEquals(secondAvailablePort, result);
     }
@@ -406,7 +407,7 @@ public class ClientConfiguratorTest {
     try (ServerSocket serverSocket2 = new ServerSocket()) {
       serverSocket2.setReuseAddress(true);
       serverSocket2.bind(new InetSocketAddress(availablePort));
-      ports = List.of(availablePort);
+      ports = Arrays.asList(availablePort);
       result = configurator.findAvailablePort(ports);
       assertTrue(
           result > availablePort,
@@ -446,7 +447,7 @@ public class ClientConfiguratorTest {
       socket2.bind(new InetSocketAddress(port2));
 
       // First test with multiple specified ports
-      List<Integer> unavailablePorts = List.of(port1, port2);
+      List<Integer> unavailablePorts = Arrays.asList(port1, port2);
       DatabricksException exception =
           assertThrows(
               DatabricksException.class, () -> configurator.findAvailablePort(unavailablePorts));
@@ -464,7 +465,7 @@ public class ClientConfiguratorTest {
 
       exception =
           assertThrows(
-              DatabricksException.class, () -> testConfigurator.findAvailablePort(List.of(port1)));
+              DatabricksException.class, () -> testConfigurator.findAvailablePort(Arrays.asList(port1)));
       assertTrue(exception.getMessage().contains("No available port found"));
     }
   }
@@ -490,8 +491,8 @@ public class ClientConfiguratorTest {
     when(mockContext.getHostForOAuth()).thenReturn("https://oauth-browser.databricks.com");
     when(mockContext.getClientId()).thenReturn("browser-client-id");
     when(mockContext.getClientSecret()).thenReturn("browser-client-secret");
-    when(mockContext.getOAuthScopesForU2M()).thenReturn(List.of("scope1", "scope2"));
-    when(mockContext.getOAuth2RedirectUrlPorts()).thenReturn(List.of(testPort));
+    when(mockContext.getOAuthScopesForU2M()).thenReturn(Arrays.asList("scope1", "scope2"));
+    when(mockContext.getOAuth2RedirectUrlPorts()).thenReturn(Arrays.asList(testPort));
     when(mockContext.getHttpConnectionPoolSize()).thenReturn(100);
     when(mockContext.getHttpMaxConnectionsPerRoute()).thenReturn(100);
     when(mockContext.getDisableOauthRefreshToken()).thenReturn(true);
@@ -505,7 +506,7 @@ public class ClientConfiguratorTest {
     assertEquals("https://oauth-browser.databricks.com", config.getHost());
     assertEquals("browser-client-id", config.getClientId());
     assertEquals("browser-client-secret", config.getClientSecret());
-    assertEquals(List.of("scope1", "scope2"), config.getScopes());
+    assertEquals(Arrays.asList("scope1", "scope2"), config.getScopes());
     assertEquals(Duration.ofSeconds(120), config.getOAuthBrowserAuthTimeout());
     assertEquals("http://localhost:" + testPort, config.getOAuthRedirectUrl());
     assertEquals(DatabricksJdbcConstants.U2M_AUTH_TYPE, config.getAuthType());
@@ -519,9 +520,9 @@ public class ClientConfiguratorTest {
     when(mockContext.getHostForOAuth()).thenReturn("https://oauth-browser.databricks.com");
     when(mockContext.getClientId()).thenReturn("browser-client-id");
     when(mockContext.getClientSecret()).thenReturn("browser-client-secret");
-    when(mockContext.getOAuthScopesForU2M()).thenReturn(List.of("scope1", "scope2"));
+    when(mockContext.getOAuthScopesForU2M()).thenReturn(Arrays.asList("scope1", "scope2"));
     when(mockContext.getHttpConnectionPoolSize()).thenReturn(100);
-    when(mockContext.getOAuth2RedirectUrlPorts()).thenReturn(List.of(8020));
+    when(mockContext.getOAuth2RedirectUrlPorts()).thenReturn(Arrays.asList(8020));
     when(mockContext.isTokenCacheEnabled()).thenReturn(true);
     when(mockContext.getTokenCachePassPhrase()).thenReturn("testPassphrase");
     when(mockContext.getHttpMaxConnectionsPerRoute()).thenReturn(100);
@@ -537,7 +538,7 @@ public class ClientConfiguratorTest {
     assertEquals("https://oauth-browser.databricks.com", config.getHost());
     assertEquals("browser-client-id", config.getClientId());
     assertEquals("browser-client-secret", config.getClientSecret());
-    assertEquals(List.of("scope1", "scope2"), config.getScopes());
+    assertEquals(Arrays.asList("scope1", "scope2"), config.getScopes());
     assertEquals("http://localhost:8020", config.getOAuthRedirectUrl());
     assertEquals(DatabricksJdbcConstants.U2M_AUTH_TYPE, config.getAuthType());
     DatabricksTokenFederationProvider databricksTokenFederationProvider =
@@ -555,9 +556,9 @@ public class ClientConfiguratorTest {
     when(mockContext.getHostForOAuth()).thenReturn("https://oauth-browser.databricks.com");
     when(mockContext.getClientId()).thenReturn("browser-client-id");
     when(mockContext.getClientSecret()).thenReturn("browser-client-secret");
-    when(mockContext.getOAuthScopesForU2M()).thenReturn(List.of("scope1", "scope2"));
+    when(mockContext.getOAuthScopesForU2M()).thenReturn(Arrays.asList("scope1", "scope2"));
     when(mockContext.getHttpConnectionPoolSize()).thenReturn(100);
-    when(mockContext.getOAuth2RedirectUrlPorts()).thenReturn(List.of(8020));
+    when(mockContext.getOAuth2RedirectUrlPorts()).thenReturn(Arrays.asList(8020));
     when(mockContext.isTokenCacheEnabled()).thenReturn(true);
     when(mockContext.getTokenCachePassPhrase()).thenReturn(null);
     when(mockContext.getHttpMaxConnectionsPerRoute()).thenReturn(100);
@@ -575,9 +576,9 @@ public class ClientConfiguratorTest {
     when(mockContext.getHostForOAuth()).thenReturn("https://oauth-browser.databricks.com");
     when(mockContext.getClientId()).thenReturn("browser-client-id");
     when(mockContext.getClientSecret()).thenReturn("browser-client-secret");
-    when(mockContext.getOAuthScopesForU2M()).thenReturn(List.of("scope1", "scope2"));
+    when(mockContext.getOAuthScopesForU2M()).thenReturn(Arrays.asList("scope1", "scope2"));
     when(mockContext.getHttpConnectionPoolSize()).thenReturn(100);
-    when(mockContext.getOAuth2RedirectUrlPorts()).thenReturn(List.of(8020));
+    when(mockContext.getOAuth2RedirectUrlPorts()).thenReturn(Arrays.asList(8020));
     when(mockContext.isTokenCacheEnabled()).thenReturn(false);
     when(mockContext.getHttpMaxConnectionsPerRoute()).thenReturn(100);
     when(mockContext.getDisableOauthRefreshToken()).thenReturn(true);
@@ -592,7 +593,7 @@ public class ClientConfiguratorTest {
     assertEquals("https://oauth-browser.databricks.com", config.getHost());
     assertEquals("browser-client-id", config.getClientId());
     assertEquals("browser-client-secret", config.getClientSecret());
-    assertEquals(List.of("scope1", "scope2"), config.getScopes());
+    assertEquals(Arrays.asList("scope1", "scope2"), config.getScopes());
     assertEquals("http://localhost:8020", config.getOAuthRedirectUrl());
     assertEquals(DatabricksJdbcConstants.U2M_AUTH_TYPE, config.getAuthType());
     DatabricksTokenFederationProvider databricksTokenFederationProvider =
@@ -689,9 +690,9 @@ public class ClientConfiguratorTest {
     when(mockContext.getHostForOAuth()).thenReturn("https://test.databricks.com");
     when(mockContext.getClientId()).thenReturn("test-client-id");
     when(mockContext.getClientSecret()).thenReturn("test-client-secret");
-    when(mockContext.getOAuthScopesForU2M()).thenReturn(List.of("custom_scope"));
+    when(mockContext.getOAuthScopesForU2M()).thenReturn(Arrays.asList("custom_scope"));
     when(mockContext.getHttpConnectionPoolSize()).thenReturn(100);
-    when(mockContext.getOAuth2RedirectUrlPorts()).thenReturn(List.of(8020));
+    when(mockContext.getOAuth2RedirectUrlPorts()).thenReturn(Arrays.asList(8020));
     when(mockContext.getHttpMaxConnectionsPerRoute()).thenReturn(100);
     when(mockContext.getDisableOauthRefreshToken()).thenReturn(true);
     when(mockContext.getOAuthWebServerTimeout()).thenReturn(120);
@@ -699,7 +700,7 @@ public class ClientConfiguratorTest {
     configurator = new ClientConfigurator(mockContext);
     DatabricksConfig config = configurator.getDatabricksConfig();
 
-    assertEquals(List.of("custom_scope"), config.getScopes());
+    assertEquals(Arrays.asList("custom_scope"), config.getScopes());
   }
 
   @Test
@@ -713,10 +714,10 @@ public class ClientConfiguratorTest {
     when(mockContext.getClientSecret()).thenReturn("test-client-secret");
     when(mockContext.getOAuthScopesForU2M())
         .thenReturn(
-            List.of(
+            Arrays.asList(
                 DatabricksJdbcConstants.SQL_SCOPE, DatabricksJdbcConstants.OFFLINE_ACCESS_SCOPE));
     when(mockContext.getHttpConnectionPoolSize()).thenReturn(100);
-    when(mockContext.getOAuth2RedirectUrlPorts()).thenReturn(List.of(8020));
+    when(mockContext.getOAuth2RedirectUrlPorts()).thenReturn(Arrays.asList(8020));
     when(mockContext.getHttpMaxConnectionsPerRoute()).thenReturn(100);
     when(mockContext.getDisableOauthRefreshToken()).thenReturn(false);
     when(mockContext.getOAuthWebServerTimeout()).thenReturn(120);
@@ -725,7 +726,7 @@ public class ClientConfiguratorTest {
     DatabricksConfig config = configurator.getDatabricksConfig();
 
     assertEquals(
-        List.of(DatabricksJdbcConstants.SQL_SCOPE, DatabricksJdbcConstants.OFFLINE_ACCESS_SCOPE),
+        Arrays.asList(DatabricksJdbcConstants.SQL_SCOPE, DatabricksJdbcConstants.OFFLINE_ACCESS_SCOPE),
         config.getScopes());
   }
 
